[package]
name = "rhh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "^0.2"
clap = { version = "^4.5", features = ["derive"] }
tokio = { version = "1.37", features = [
  "rt",
  "bytes",
  "fs",
  "macros",
  "windows-sys",
  "sync",
  "rt-multi-thread",
  "process",
  "io-std",
  "io-util",
  "signal",
  "time",
] }
glob = { version = "0.3" }
