[package]
name = "rhh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = [
  #   "rt",
  #   "bytes",
  #   "fs",
  #   "macros",
  #   "sync",
  "rt-multi-thread",
  #   "process",
  #   "io-std",
  #   "io-util",
  #   "signal",
  #   "time",
] }
glob = { version = "0.3" }
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1.10.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
strip = true
panic = 'abort'
incremental = false
overflow-checks = false
